# QtShanoir

./: CMakeLists.txt  CMakeLists.txt.autosave  QtShanoir.sln  QtShanoir.vcxproj  QtShanoir.vcxproj.filters
CMake/Modules/: FindQuaZip.cmake  Finddocopt.cmake  Findyaml-cpp.cmake  list_header_directories_to_include.cmake  list_source_files.cmake
Code/: CMakeLists.txt  QtShanoir.cpp  QtShanoirProgressWidget.h  QtShanoirTreeWidget.cpp  QtShanoirUploadWidget.cpp  QtShanoirWebService.h  QtSoap.cpp
Code/quazip/: CMakeLists.txt
Command/: CMakeLists.txt
Command/shanoirqr/: CMakeLists.txt  Finddocopt.cmake  main.cpp  shanoirqr.cpp  shanoirqr.h
DAO/: CMakeLists.txt  dao.cpp  dao.h  parsetree.cpp  qtshanoirdataset.cpp  qtshanoirdataset.h  qtshanoirexam.cpp  qtshanoirexam.h  qtshanoirtree.cpp  qtshanoirtree.h
Debug/: CL.read.1.tlog  CL.write.1.tlog  QtShanoir.lastbuildstate  cl.command.1.tlog  vc100.idb
Demo/: CMakeLists.txt  Demo.cpp  main.cpp
GUI/: CMakeLists.txt  HierarchicalHeaderView.cpp  qtshanoirdetailswidget.cpp  qtshanoirdownloadwidget.cpp  qtshanoirsettingswidget.cpp  qtshanoiruploadwidgetdatasettypedetails.cpp  qtshanoiruploadwidgetdatasettypedetailscalibrationdataset.cpp  qtshanoiruploadwidgetdatasettypedetailscalibrationdataset.h  qtshanoiruploadwidgetdatasettypedetailseegmegpetdataset.cpp  qtshanoiruploadwidgetdatasettypedetailseegmegpetdataset.h  qtshanoiruploadwidgetdatasettypedetailsmrdataset.cpp  qtshanoiruploadwidgetdatasettypedetailsmrdataset.h  qtshanoiruploadwidgetdatasettypedetailsmrspectroscopydataset.cpp  qtshanoiruploadwidgetdatasettypedetailsmrspectroscopydataset.h  qtshanoiruploadwidgetdatasettypedetailsparameterquantificationdataset.cpp  qtshanoiruploadwidgetdatasettypedetailsparameterquantificationdataset.h  qtshanoiruploadwidgetdatasettypedetailsspectdataset.cpp  qtshanoiruploadwidgetdatasettypedetailsspectdataset.h  qtshanoiruploadwidgetdatasettypedetailsstandarddataset.cpp  qtshanoiruploadwidgetdatasettypedetailsstandarddataset.h  qtshanoiruploadwidgetdatasettypedetailstemplatedataset.cpp  qtshanoiruploadwidgetdatasettypedetailstemplatedataset.h  qtshanoiruploadwidgetshowstepsdatasettypedetails.cpp
QuaZip/: CMakeLists.txt
